--- a/style.css
+++ b/style.css
@@ -65,3 +65,9 @@ text-align: center;
   font-size: 25px;
   letter-spacing: 10px;
 }
+
+@media only screen and (max-device-width: 1024px) {
+    .cd-logo, .layer-cake, .kitchen-equipment, .cake-ingredients, .bowl-of-cakemix, .cake-in-oven, .decorated-cake {
+        background-attachment: scroll;
+    }
+}
